bk_ida/gccida/c2/insn_extract
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_extract/src/insn-extract.c:521:4: error: expected ';' after expression
rtx v45; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_extract/src/insn-extract.c:521:5: error: use of undeclared identifier 'v45'
rtx v45; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_extract/src/insn-extract.c:522:4: error: expected ';' after expression
rtx v46; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_extract/src/insn-extract.c:522:5: error: use of undeclared identifier 'v46'
rtx v46; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_extract/src/insn-extract.c:523:4: error: expected ';' after expression
rtx v47; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_extract/src/insn-extract.c:523:5: error: use of undeclared identifier 'v47'
rtx v47; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_extract/src/insn-extract.c:524:4: error: expected ';' after expression
rtx v48; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_extract/src/insn-extract.c:524:5: error: use of undeclared identifier 'v48'
rtx v48; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_extract/src/insn-extract.c:527:4: error: expected ';' after expression
rtx v51; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_extract/src/insn-extract.c:527:5: error: use of undeclared identifier 'v51'
rtx v51; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_extract/src/insn-extract.c:528:4: error: expected ';' after expression
rtx v52; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_extract/src/insn-extract.c:528:5: error: use of undeclared identifier 'v52'
rtx v52; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_extract/src/insn-extract.c:529:4: error: expected ';' after expression
rtx v53; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_extract/src/insn-extract.c:529:5: error: use of undeclared identifier 'v53'
rtx v53; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_extract/src/insn-extract.c:531:6: error: use of undeclared identifier 'v55'
rtx *v55; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_extract/src/insn-extract.c:533:4: error: expected ';' after expression
rtx v57; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_extract/src/insn-extract.c:533:5: error: use of undeclared identifier 'v57'
rtx v57; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_extract/src/insn-extract.c:534:4: error: expected ';' after expression
rtx v58; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_extract/src/insn-extract.c:534:5: error: use of undeclared identifier 'v58'
rtx v58; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_extract/src/obj/insn-extract.o] Error 1
